# AINS_HACK

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_contract_sketch.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements-api.txt  requirements.txt
.cassette-data/: cassette.sqlite3
agent/: README.md  full_stack_agent.py  hosted_agent.py  jira_triage_agent.py  mcp_jira_agent.py  ops_incident_agent.py
agent/tests/: test_preventive.py
ai_agents/: README.md  __init__.py  confidence.py  counterfactual.py  debug_agent.py  demo_reliability.py  failure_library.py  llm.py  mock_synthesizer.py  prompts.py  recorded_trace.py  replay_adapter.py  replay_interface.py  root_cause.py  semantic_matcher.py  trace_content.py
api/: README.md  app.py  failure_memory.py  seed.py  upload.py
cassette/: __init__.py  __main__.py  ca.py  cli.py  consent.py  launchers.py  paths.py  session_runner.py  shim_env.py  trust.py
docker/: agent-runner.Dockerfile  api.Dockerfile
docs/: architecture.md  data_description.md  demo_scenario.md  trace_schema.json
eval/: README.md  harness.py  reliability.json  results.json
recorder/: README.md  capture.py  http_proxy.py  mcp_proxy.py  mock_upstream.py  policy.py  policy.yaml  record.py  record_session.py  replay.py  run_agent.py  run_hosted.py  sdk_hooks.py  session.py
replay_engine/: README.md  divergence.py  replay.py  snapshot.py
trace_store/: README.md  __init__.py  blob_store.py  failure_library.py  store.py
visualizer/: Dockerfile  README.md  index.html  package-lock.json  package.json
(+107 files in other folders)
